<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TeaActivity"
    tools:showIn="@layout/activity_main">

    <Spinner
        android:id="@+id/spinnerTeaType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textTeaTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Tea Title"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerTeaType"
        app:layout_constraintStart_toStartOf="@+id/spinnerTeaType"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTeaType" />

    <EditText
        android:id="@+id/textTeaText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Tea Text"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinnerTeaType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerTeaType"
        app:layout_constraintTop_toBottomOf="@+id/textTeaTitle" />

    <TextView
        android:id="@+id/colorSelectorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Note Colour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTeaText" />

    <com.lyeng.notekeeper.ColourSelector
        android:id="@+id/colourSelectorPrio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSelectorLabel"
        app:colors="@array/note_color_array"/>

</android.support.constraint.ConstraintLayout>