<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tea"
            android:icon="@drawable/ic_free_breakfast"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_teatypes"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_recent_notes"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Recent Tea" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
